WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250446
[@property] Invalidate matched declarations cache when property registrations change
https://bugs.webkit.org/show_bug.cgi?id=250446
Summary
[@property] Invalidate matched declarations cache when property registrations...
Antti Koivisto
Reported
2023-01-11 01:27:32 PST
Property registrations may affect interpretations of custom properties in the cache.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-11 01:28:30 PST
<
rdar://problem/104113725
>
Antti Koivisto
Comment 2
2023-01-11 01:32:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8514
EWS
Comment 3
2023-01-11 09:35:24 PST
Committed
258787@main
(f09c90ff7435): <
https://commits.webkit.org/258787@main
> Reviewed commits have been landed. Closing PR #8514 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug