[@property] Invalidate matched declarations cache when property registrations change https://bugs.webkit.org/show_bug.cgi?id=250446 rdar://104113725

Reviewed by Antoine Quint.

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/at-property-typedom-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/determine-registration-expected.txt:
* Source/WebCore/style/CustomPropertyRegistry.cpp:
(WebCore::Style::CustomPropertyRegistry::registerFromStylesheet):

Property registrations may affect interpretations of custom properties in the cache.

Canonical link: https://commits.webkit.org/258787@main